--- a/less/modal.less
+++ b/less/modal.less
@@ -1,4 +1,6 @@
 .login-box {
+  visibility: hidden;
+  z-index: 1200;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -10,7 +12,6 @@
   box-sizing: border-box;
   box-shadow: 0 1.5rem 25rem rgba(0, 0, 0, 0.5);
   border-radius: 1rem;
-  color: @font-color;
   h2 {
     color: @font-color;
     margin: 0 0 3rem;
@@ -49,4 +50,7 @@
       transition: 0.5s;
     }
   }
+}
+.login-box.show {
+  visibility: visible;
 }
